@@ -1,0 +1,12 @@
+{
+    "styles" : [
+    [ "field_list", {
+         "parent": "bodytext",
+         "commands": [
+            [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ], 
+            [ "TOPPADDING", [ 0, 0 ], [ -1, -1 ], 0 ]
+        ], 
+        "colWidths": ["50%","50%"],
+        "spaceBefore": 6
+    }]
+]}
