@@ -1,0 +1,47 @@
+This field list should be dividex exactly in mid-page:
+
+:field1: Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         
+         
+.. raw:: pdf
+
+         PageBreak twoColumn
+         
+This field list should be dividex exactly in mid-column (1/4th page width):
+
+:field1: Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         Long Long Long
+         
